<resources>
    <string name="app_name">Kapao</string>
    <string name="get_started">เริ่มต้นการใช้งาน</string>
    <string name="today">วันนี้</string>
    <string name="total">ทั้งหมด</string>
    <string name="expense">รายจ่าย</string>
    <string name="income">รายรับ</string>
    <string name="bath">บาท</string>
    <string name="note">จดบันทึก...</string>
    <string name="choose_category">เลือกหมวด</string>
    <string name="name_category">ชื่อหมวด</string>
    <string name="name_statistic">ชื่อสถิติ</string>
    <string name="setting_category">ตั้งค่าหมวด</string>
    <string name="add">เพิ่ม</string>
    <string name="cancel">ยกเลิก</string>
    <string name="no">ไม่</string>
    <string name="new_category">เพิ่มหมวดใหม่</string>
    <string name="new_list">เพิ่มรายการใหม่</string>
    <string name="make_sure_clear">คุณต้องการจะล้างข้อมูลใข่หรือไม่ ?</string>
    <string name="make_sure_delete">คุณต้องการจะลบใช่หรือไม่ ?</string>
    <string name="make_sure_delete2">ข้อมูลในหมวดนี้จะถูกย้ายไปสู่หมวดอื่นๆ</string>
    <string name="name_list">ชื่อรายการ</string>
    <string name="add_statistic">เพิ่มสถิติใหม่</string>
    <string name="edit_list">แก้ไขรายการ</string>
    <string name="edit_statistic">แก้ไขสถิติ</string>
    <string name="edit">แก้ไข</string>
    <string name="amount">จำนวนเงิน</string>
    <string name="fill_money">ระบุจำนวนเงิน</string>
    <string name="record">จดบันทึก</string>
    <string name="date">วันที่</string>
    <string name="category">หมวด</string>
    <string name="clear_data">ล้างข้อมูล</string>
    <string name="money_started">เงินเริ่มต้น</string>
    <string name="parent">พ่อแม่</string>
    <string name="salary">เงินเดือน</string>
    <string name="gift">ของขวัญ</string>
    <string name="borrow">ยืม</string>
    <string name="sale">ขายของ</string>
    <string name="others">อื่นๆ</string>
    <string name="travel">เดินทาง</string>
    <string name="food">อาหาร</string>
    <string name="cloth">เสื้อผ้า</string>
    <string name="movie">ดูหนัง</string>
    <string name="health">รักษาตัว</string>
    <string name="lover">คนรัก</string>
    <string name="party">ปาร์ตี้</string>
    <string name="shopping">ช๊อปปิ้ง</string>
    <string name="electricity_bill">ค่าไฟ</string>
    <string name="water_bill">ค่าน้ำ</string>
    <string name="telephone">โทรศัพท์</string>
    <string name="pet">สัตว์เลี้ยง</string>
    <string name="sport">กีฬา</string>
    <string name="family">ครอบครัว</string>
    <string name="reservation">ที่พัก</string>
    <string name="basic_needs">ปัจจัย 4</string>
    <string name="relax">ผ่อนคลาย</string>
    <string name="pay">ชำระเงิน</string>
    <string name="please_fill_statistic">กรุณากรอกชื่อสถิติ</string>
    <string name="setting_graph_statistic">ตั้งค่ากราฟสถิติ</string>
    <string name="spend_statistic">สถิติการใช้เงิน</string>
    <string name="edit_category">แก้ไขหมวด</string>
    <string name="delete_category">ลบหมวด</string>
    <string name="delete_statistic">ลบสถิติ</string>
    <string name="please_fill_category_name">กรุณาพิมพ์ชื่อหมวด</string>
    <string name="please_choose_category_name">กรุณาเลือกหมวด</string>
    <string name="please_choose_type_category_name">กรุณาเลือกชนิดหมวด</string>
    <string name="history">ประวัติการใช้</string>
    <string name="done">ตกลง</string>
    <string name="yes">ใช่</string>
    <string name="please_fill_money">กรุณาระบุจำนวนเงิน</string>
    <string name="instruction">วิธีการใช้งาน</string>
    <string name="welcome">ยินดีต้อนรับ</string>
    <string name="new_feature">ฟังก์ชันใหม่</string>
    <string name="to_ledger_application">เข้าสู่แอพพลิเคชั่นกระเป๋าที่</string>
    <string name="simpler_generate_category">จัดรูปแบบหมวดตามใจชอบ</string>
    <string name="simpler_generate_statistic">จัดรูปแบบสถิติตามใจอยาก</string>
    <string name="beautifully_simple_management">เหมาะสมกับการทำงานโดยแท้จริง</string>
    <string name="cant_edit_others_category">คุณไม่สามารถแก้ไขหรือลบหมวดอื่นๆได้</string>
    <string name="do_you_want_to_move">คุณต้องการจะย้ายหมวด </string>
    <string name="from">"จากสถิติ "</string>
    <string name="to"> มาสู่สถิติ </string>
    <string name="dont_you">\" ใช่หรือไม่ ? \"</string>

    <string name="edit_data">แก้ไขข้อมูล</string>
    <string name="delete_data">ลบข้อมูล</string>
    <string name="sunday">วันอาทิตย์ที่</string>
    <string name="monday">วันจันทร์ที่</string>
    <string name="tuesday">วันอังคารที่</string>
    <string name="wednesday">วันพุธที่</string>
    <string name="thursday">วันพฤหัสบดีที่</string>
    <string name="friday">วันศุกร์่</string>
    <string name="saturday">วันเสาร์ที่</string>

    <string name="january">มกราคม</string>
    <string name="february">กุมภาพันธ์</string>
    <string name="march">มีนาคม</string>
    <string name="april">เมษายน</string>
    <string name="may">พฤษภาคม</string>
    <string name="june">มิถุนายน</string>
    <string name="july">กรกฎาคม</string>
    <string name="august">สิงหาคม</string>
    <string name="september">กันยายน</string>
    <string name="october">ตุลาคม</string>
    <string name="november">พฤศจิกายน</string>
    <string name="december">ธันวาคม</string>

    <string name="passcode_lock">เปิดระบบพาสโค๊ด</string>
    <string name="change_passcode">เปลี่ยนรหัสพาสโค๊ด</string>
    <string name="forget_passcode">ถ้าคุณลืมพาสโค๊ดของคุณ คุณจำเป็นต้องลบและติดตั้งแอพพลิเคชั่นกระเป๋าใหม่ เมื่อคุณทำการติดตั้งใหม่ข้อมูลทั้งหมดจะไม่สามารถกู้คืนได้</string>
    <string name="language">ภาษา</string>
    <string name="currency">สกุลเงิน</string>
    <string name="thai">ไทย</string>
    <string name="english">English</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3754673556433244/6327931413</string>
    <string name="settings">ตั้งค่า</string>
    <string name="exchange_currency">คุณต้องการจะเปลี่ยนสกุลเงินหรือไม่</string>
    <string name="change_language">กรุณาเลือกภาษา</string>
    <string name="ok">ตกลง</string>
    <string name="pleasetryagain">โปรดลองใหม่อีกครั้ง</string>
    <string name="no_data_found">ไม่ค้นพบข้อมูล</string>
    <string name="use">ใช้</string>
    <string name="calculator">เครื่องคิดเลข</string>
    <string name="setPasscode">ตั้งค่าพาสโค๊ด</string>
    <string name="pleaseEnterAPasscode">กรุณาระบุพาสโค๊ด</string>
    <string name="comfirmPasscode">ยืนยันพาสโค๊ด</string>
    <string name="pleaseReEnterAPasscode">กรุณาระบุพาสโค๊ดอีกรอบ</string>
    <string name="choose_language">เลือกภาษา</string>
    <string name="defaultSettings">ตั้งค่าพื้นฐาน</string>
    <string name="passcodeNotMatch">พาสโค๊ดไม่ถูกต้อง กรุณากรอกใหม่อีกครั้ง</string>
    <string name="set">ตั้งค่า</string>
    <string name="เลือก">เลือก</string>
    <string name="confirm">ยืนยัน</string>
    <string name="show">แสดง</string>
</resources>
