<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_statistic"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/name_statistic"
        android:maxLength="10"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_add_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add_statistic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_cus_btn_add"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>