<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.activity.ExpenseIncomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_money"
            style="@style/edt_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:hint="0"
            android:maxLength="8"
            android:inputType="numberDecimal"
            android:minWidth="100dp"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/edt_money"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/edt_money"
            android:text="@string/bath"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grayDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_edit" />

        <EditText
            android:id="@+id/edt_note"
            style="@style/edt_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/note"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_cus_overlay"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="10dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</LinearLayout>
