<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passcode_lock"
            android:textSize="15dp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/frm_change_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_cus_overlay"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_change_passcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_passcode"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:textSize="15dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_forget_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_passcode"
                android:textSize="13dp" />
        </LinearLayout>


    </FrameLayout>
</LinearLayout>