<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.rashata.jamie.spend.views.activity.FirstSettingLanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_started"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/edt_initial_money"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/grayDark"
                android:hint="@string/fill_money"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="9"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14dp">

                <requestFocus />

            </EditText>

            <Spinner
                android:id="@+id/spin_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray_radius"
            android:text="@string/set"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>