<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_passcode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.activity.PasscodeActivity">
    <TextView
        android:id="@+id/txt_title_passcode"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/setPasscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/pleaseEnterAPasscode"
        android:textSize="10dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_passcode"
            android:scaleType="fitCenter"
            android:text="@string/cancel"
            android:textColor="@color/selector_passcode_text"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btn_0"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="0" />

        <ImageButton
            android:id="@+id/btn_delete"
            style="@style/passcode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:padding="22dp"
            android:scaleType="fitCenter"
            android:src="@drawable/backspace"
            android:text="0" />

    </LinearLayout>

</LinearLayout>


